syntax = "proto3";
package elys.clock.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/elys-network/elys/x/clock/types";

// Params defines the set of module parameters.
message Params {
    // contract_addresses stores the list of executable contracts to be ticked on every block.
    repeated string contract_addresses = 1 [    
      (gogoproto.jsontag) = "contract_addresses,omitempty",
      (gogoproto.moretags) = "yaml:\"contract_addresses\""
    ];
  
    uint64 contract_gas_limit = 2 [
      (gogoproto.jsontag) = "contract_gas_limit,omitempty",
      (gogoproto.moretags) = "yaml:\"contract_gas_limit\""
    ];
}
  